<resources>
    <string name="app_name">KriptDaPick</string>
    <string name="encrypt_image_button">Encrypt</string>
    <string name="iv_description">The image to encrypt in</string>
    <string name="no_selection">You haven\'t selected a picture</string>
    <string name="select_photo_bu">Select</string>
    <string name="view_photo_bu">Examine</string>
    <string name="text_to_encrypt_hint">Text to encrypt</string>
    <string name="decrypt_image_button">Decrypt</string>
    <string name="text_too_big">The text exceeds the size limit!</string>
    <string name="text_non_existent">There is no text to use :(</string>
    <string name="sth_wrong">Something went wrong\.\.\.</string>
    <string name="successful_save">Image saved ;)</string>
    <string name="image_too_small">Image must be at least 100x100</string>
</resources>
